tests/baselines/reference/underscoreThisInDerivedClass01.errors.txt
tests/cases/compiler/underscoreThisInDerivedClass01.ts(20,13): error TS2399: Duplicate identifier '_this'. Compiler uses variable declaration '_this' to capture 'this' reference.


==== tests/cases/compiler/underscoreThisInDerivedClass01.ts (1 errors) ====
    // @target es5
    
    // Original test intent:
    // When arrow functions capture 'this', the lexical 'this' owner
    // currently captures 'this' using a variable named '_this'.
    // That means that '_this' becomes a reserved identifier in certain places.
    //
    // Constructors have adopted the same identifier name ('_this')
    // for capturing any potential return values from super calls,
    // so we expect the same behavior.
    
    class C {
        constructor() {
            return {};
        }
    }
    
    class D extends C {
        constructor() {
            var _this = "uh-oh?";
                ~~~~~
!!! error TS2399: Duplicate identifier '_this'. Compiler uses variable declaration '_this' to capture 'this' reference.
            super();
        }
    }